--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-textarea-autosize": "^8.2.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
