--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "coordenadas-do-cep": "^1.2.0",
     "express": "^4.17.1"
   },
