--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-image-crop": "^8.6.5",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
